--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "@nestjs/schedule": "^6.0.0",
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.1.3",
+    "@types/multer": "^2.0.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dayjs": "^1.11.13",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.1",
     "mysql2": "^3.14.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -45,7 +47,8 @@
     "rxjs": "^7.8.2",
     "slugify": "^1.6.6",
     "socket.io": "^4.8.1",
-    "typeorm": "^0.3.25"
+    "typeorm": "^0.3.25",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
