--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dayjs": "^1.11.13",
+    "exceljs": "^4.4.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
@@ -48,8 +49,7 @@
     "rxjs": "^7.8.2",
     "slugify": "^1.6.6",
     "socket.io": "^4.8.1",
-    "typeorm": "^0.3.25",
-    "xlsx": "^0.18.5"
+    "typeorm": "^0.3.25"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
