--- a/package.json
+++ b/package.json
@@ -50,12 +50,13 @@
     "rxjs": "^7.8.2",
     "slugify": "^1.6.6",
     "socket.io": "^4.8.1",
+    "tmp": "^0.2.4",
     "typeorm": "^0.3.25"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
-    "@nestjs/cli": "^11.0.0",
+    "@nestjs/cli": "^11.0.10",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
@@ -98,5 +99,9 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "overrides": {
+    "tmp": "^0.2.4"
   }
+  
 }
