--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "@nestjs/schedule": "^6.0.0",
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.1.3",
+    "@types/ioredis": "^4.28.10",
     "@types/multer": "^2.0.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dayjs": "^1.11.13",
     "exceljs": "^4.4.0",
+    "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
@@ -103,5 +105,4 @@
   "overrides": {
     "tmp": "^0.2.4"
   }
-  
 }
