--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "slugify": "^1.6.6",
     "socket.io": "^4.8.1",
     "tmp": "^0.2.4",
-    "typeorm": "^0.3.25"
+    "typeorm": "^0.3.25",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
