--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "nest start --host 0.0.0.0",
     "start:dev": "nest start --watch --host 0.0.0.0",
     "start:debug": "nest start --debug --watch --host 0.0.0.0",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
